--- a/LIBSProcessing/LIBSProcessing/Window.resx
+++ b/LIBSProcessing/LIBSProcessing/Window.resx
@@ -126,4 +126,7 @@
   <metadata name="fileOpener.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>299, 25</value>
   </metadata>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>408, 25</value>
+  </metadata>
 </root>
